# char300-lab

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: quality.yml
docs/: OPFS.md
public/: manifest.webmanifest  sw.js
scripts/: check-version.mjs  generate-synthetic-archives.mjs  performance-baseline.mjs
src/: backup.ts  diff.ts  main.ts  overview-layout.ts  share-card-layout.ts  share-text-layout.ts  store.ts  styles.css  tokenizer.ts  types.ts  writing-years.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: backup.test.ts  diff.test.ts  fixtures.ts  overview-layout.test.ts  share-card-layout.test.ts  share-text-layout.test.ts  store.test.ts  synthetic-archive.test.ts  tokenizer.test.ts  writing-years.test.ts
