[package]
name = "char300-lab"
version = "0.1.0"
description = "300字写作与版本打磨系统"
authors = ["sennes"]
edition = "2021"

[lib]
name = "char300_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
